--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>covid-19-estimator</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="bootstrap4/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="purified/bootstrap.min.css">
     </head>
     <body>
         <div class="container-fluid bg-info text-light">
@@ -11,7 +11,7 @@
                 <div class="col-xl-3 col-lg-3 col-md-3"></div>
                 <div class="col-xl-6 col-lg-6 col-md-6" style="text-align: center;">
                     <h3 style="margin:5% 0% 5% 0%">COVID-19 ESTIMATOR</h3>
-                    
+
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-3"></div>
             </div>
